[tool.poetry]
name = "disaster-tweet-classification"
version = "0.1.0"
description = ""
authors = ["Abhishek Mehra <me.abhishek18@gmail.com>"]
readme = "README.md"
packages = [{include = "disaster_tweet_classification"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
gensim = "^4.3.0"
scikit-learn = "^1.0.2"
xgboost = "^1.7.1"
matplotlib =  "^3.6.2"
regex = "^2022.10.31"
nltk = "^3.8"
joblib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.16.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
